--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 
 <head>
     <meta charset="utf-8">
+    <title>Digital Clock</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js">
+    </script>
+  </head>
+  <body>
+    <div id="container">
+      <p id="clock"></p>
+    </div>
+  </body>
+</html>
+     
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aggie House</title>
