--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="styles.css">
     <script src="script.js">
     </script>
-  </head>
+
+
   <body>
     <div id="container">
       <p id="clock"></p>
+    </div>
+    <div id="container">
+        <p id="date"></p>
     </div>
   </body>
 </html>
@@ -89,12 +93,11 @@
         </nav>
     </header>
 
-    <section id="home">
-    <div class="section-content">
-        <h1 class="typewriter"></h1>
-        <p> Aggie House</p>
-    </div>
-</section>
+    <section id="upload">
+        <div class="section-title">Upload Spreadsheet</div>
+        <input type="file" id="fileInput" accept=".xlsx,.xls,.csv">
+        <button onclick="uploadFile()">Upload</button>
+    </section>
 
     <section id="info">
         <div class="section-title">What is Aggie House</div>
